[gd_scene load_steps=15 format=3 uid="uid://4wb77emq8t5p"]

[ext_resource type="Script" uid="uid://6mjcp2pfoqs6" path="res://menu/main/menu.gd" id="1_6hvox"]
[ext_resource type="Texture2D" uid="uid://drssc5o2ehjq" path="res://main/logo.png" id="1_m6h1l"]
[ext_resource type="Texture2D" uid="uid://brcdsp82d82se" path="res://menu/main/background.png" id="2_f1en6"]
[ext_resource type="Texture2D" uid="uid://dnho657mg7o1w" path="res://menu/main/icons/solo_game.png" id="2_tkm62"]
[ext_resource type="Texture2D" uid="uid://bxs6sdufwbl8p" path="res://menu/main/icons/together_game.png" id="3_fpx5a"]
[ext_resource type="Texture2D" uid="uid://djuddec1qr5ot" path="res://menu/main/icons/shop.png" id="4_jpuob"]
[ext_resource type="Texture2D" uid="uid://d2rpk8yt0h06x" path="res://menu/main/icons/achievements.png" id="5_noej1"]
[ext_resource type="Texture2D" uid="uid://c3sk875fn0rx" path="res://menu/main/icons/settings.png" id="6_0pcoh"]
[ext_resource type="Texture2D" uid="uid://c3x171iwlnadt" path="res://menu/main/icons/inventory.png" id="6_ts3g1"]
[ext_resource type="Texture2D" uid="uid://b0j3g7rkerkdm" path="res://menu/theme/icons/help.png" id="7_aw44p"]
[ext_resource type="PackedScene" uid="uid://cuewsvjjnyl40" path="res://menu/main/name_dialog.tscn" id="10_yw6bl"]
[ext_resource type="Texture2D" uid="uid://durmmh0vjl0eg" path="res://menu/theme/icons/exit.png" id="12_k1ro1"]

[sub_resource type="InputEventAction" id="InputEventAction_k1ro1"]
action = &"ui_cancel"

[sub_resource type="Shortcut" id="Shortcut_wm4e1"]
events = [SubResource("InputEventAction_k1ro1")]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6hvox")
metadata/_custom_type_script = "uid://6mjcp2pfoqs6"

[node name="Image" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_f1en6")
stretch_mode = 6

[node name="Logo" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -400.0
offset_top = 16.0
offset_right = 400.0
offset_bottom = 176.0
grow_horizontal = 2
texture = ExtResource("1_m6h1l")
expand_mode = 1

[node name="ButtonsContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -194.0
offset_top = -144.0
offset_right = 194.0
offset_bottom = 240.0
grow_horizontal = 2
grow_vertical = 2

[node name="PlayButtonsContainer" type="HBoxContainer" parent="ButtonsContainer"]
layout_mode = 2

[node name="PlaySolo" type="Button" parent="ButtonsContainer/PlayButtonsContainer"]
custom_minimum_size = Vector2(192, 192)
layout_mode = 2
theme_override_constants/icon_max_width = 160
disabled = true
text = "Играть одному"
icon = ExtResource("2_tkm62")
icon_alignment = 1
vertical_icon_alignment = 0
expand_icon = true

[node name="PlayNetwork" type="Button" parent="ButtonsContainer/PlayButtonsContainer"]
custom_minimum_size = Vector2(192, 192)
layout_mode = 2
theme_override_constants/icon_max_width = 160
text = "Играть по сети"
icon = ExtResource("3_fpx5a")
icon_alignment = 1
vertical_icon_alignment = 0
expand_icon = true

[node name="GameButtonsContainer" type="HBoxContainer" parent="ButtonsContainer"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="Inventory" type="Button" parent="ButtonsContainer/GameButtonsContainer"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
theme_override_constants/icon_max_width = 80
disabled = true
text = "Арсенал"
icon = ExtResource("6_ts3g1")
icon_alignment = 1
vertical_icon_alignment = 0
expand_icon = true

[node name="Shop" type="Button" parent="ButtonsContainer/GameButtonsContainer"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
theme_override_constants/icon_max_width = 80
disabled = true
text = "Магазин"
icon = ExtResource("4_jpuob")
icon_alignment = 1
vertical_icon_alignment = 0
expand_icon = true

[node name="Achievements" type="Button" parent="ButtonsContainer/GameButtonsContainer"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
theme_override_constants/icon_max_width = 80
disabled = true
text = "Достижения"
icon = ExtResource("5_noej1")
icon_alignment = 1
vertical_icon_alignment = 0
expand_icon = true

[node name="MiscButtonsContainer" type="HBoxContainer" parent="ButtonsContainer"]
layout_mode = 2

[node name="Settings" type="Button" parent="ButtonsContainer/MiscButtonsContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Настройки"
icon = ExtResource("6_0pcoh")

[node name="About" type="Button" parent="ButtonsContainer/MiscButtonsContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Об игре"
icon = ExtResource("7_aw44p")

[node name="Quit" type="Button" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -72.0
offset_top = 16.0
offset_right = -16.0
offset_bottom = 72.0
grow_horizontal = 0
shortcut = SubResource("Shortcut_wm4e1")
shortcut_in_tooltip = false
icon = ExtResource("12_k1ro1")

[node name="NameDialog" parent="." instance=ExtResource("10_yw6bl")]
visible = false

[node name="About" type="Window" parent="."]
title = "Об игре"
position = Vector2i(0, 28)
size = Vector2i(720, 428)
visible = false
transient = true
exclusive = true
unresizable = true

[node name="Background" type="ColorRect" parent="About"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="About"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="About/MarginContainer"]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="About/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "[font_size=20][center]Авторы[/center][/font_size]
Summersay415 - идея, программирование, карты и скины
ZerkaloWorld - скины, карты, оружия и навыки
DanKras - скины и загрузочные экраны
Kesha1026 - музыка
wiziritka - скины и карты
Ronill - фоны
BaCat86, Kaurt, MilDeV, ZeroHero135, smilecov_07 - скины
Тестировщики (и благодарность):
LohDebil228, ATINY, YanniKss
[url=https://t.me/dsgames31][center]Telegram-канал Diamond Studio GAMES[/center][/url]
[font_size=20][center]Движок[/center][/font_size]
Игра сделана на движке Godot Engine, имеющем лицензию MIT. С текстом лицензии можно ознакомиться [url=https://godotengine.org/license]здесь[/url].
[font_size=20][center]Другое[/center][/font_size]
Скины эмоджи взяты с [url]https://openmoji.org/[/url].
Музыка карты Гроза - [url=https://www.newgrounds.com/audio/listen/638150]Waterflame - Thunderzone v2[/url].
Почти лето!.."
autowrap_mode = 2

[node name="Close" type="Button" parent="About/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "ОК"

[node name="UpdateDialog" type="ConfirmationDialog" parent="."]
title = "Доступно обновление!"
size = Vector2i(246, 112)
unresizable = true
ok_button_text = "Скачать"
cancel_button_text = "Позже"

[connection signal="pressed" from="ButtonsContainer/PlayButtonsContainer/PlayNetwork" to="." method="_on_play_network_pressed"]
[connection signal="pressed" from="ButtonsContainer/MiscButtonsContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="ButtonsContainer/MiscButtonsContainer/About" to="About" method="popup_centered"]
[connection signal="pressed" from="Quit" to="." method="_on_quit_pressed"]
[connection signal="name_accepted" from="NameDialog" to="." method="_on_name_dialog_name_accepted"]
[connection signal="close_requested" from="About" to="About" method="hide"]
[connection signal="meta_clicked" from="About/MarginContainer/VBoxContainer/RichTextLabel" to="." method="_on_rich_text_label_meta_clicked"]
[connection signal="pressed" from="About/MarginContainer/VBoxContainer/Close" to="About" method="hide"]
[connection signal="confirmed" from="UpdateDialog" to="." method="_on_update_dialog_confirmed"]
